--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
               repellat sint officiis laborum expedita, placeat nam quo magnam
               dolorem repellendus itaque nihil id qui ex repudiandae voluptates!
-              Non, praesentium ratione.
+              Non, praesentium ratione. No
             </p>
           </div>
 
