Add README file

--- a/index.html
+++ b/index.html
@@ -208,12 +208,10 @@
         </main>
       </section>
       <!-- section3 -->
-      <section class="third">
-        <div>
-          <h5>Still have questions?</h5>
-          <p>Can't find answers to your questions? Please chat our team</p>
-          <button>Get in touch</button>
-        </div>
+      <section class="third" style="background-color: #111f4d; color: white">
+        <h5>Still have questions?</h5>
+        <p>Can't find answers to your questions? Please chat our team</p>
+        <button>Get in touch</button>
       </section>
     </main>
     <!-- Footer -->
