--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     />
     <link rel="stylesheet" href="faq.css" />
   </head>
+
+  <!-- body -->
   <body>
     <!-- Header -->
     <header>
@@ -39,7 +41,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a href="#"><img src="images/terms77.jpg" alt="" /></a>
+            <img src="./images/terms77.jpg" alt="" class="pt-2" />
             <ul
               class="navbar-nav me-auto mb-2 mb-lg-0 px-5"
               style="margin: auto"
@@ -68,42 +70,55 @@
         </div>
       </nav>
     </header>
+
     <!-- Main -->
+
     <main>
       <!-- Section1 -->
-
-      <section class="site-banner">
-        <div class="container">
+      <section class="first container">
+        <div class="">
           <div class="row">
-            <div class="col-lg-6 col-md-12 site-title">
-              <h3>How can we help you?</h3>
-              <button class="searchButton" href="#">
-                <i class="material-icons">
-                  <img src="images/search.jpg" alt="" />
-                </i>
-              </button>
-              <input
-                class="searchInput"
-                type="text"
-                name=""
-                placeholder="Type keywords to find answers"
-              />
-              <h3>Frequently Asked Questions (FAQs)</h3>
+            <div class="col-lg-6 col-md-12 site-title mt-5">
+              <h1>How can we help you?</h1>
+
+              <div class="input-group mb-3">
+                <span
+                  class="input-group-text"
+                  id="basic-addon1"
+                  style="border: none; background-color: white"
+                >
+                  <i class="material-icons">
+                    <img src="images/search.jpg" alt="" /> </i
+                ></span>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Type keywords to find answers"
+                  aria-label="Username"
+                  aria-describedby="basic-addon1"
+                  style="padding: 1em; font-family: Inter, cursive"
+                />
+              </div>
+
+              <div style="margin-top: 12em">
+                <h2>Frequently Asked Questions (FAQs)</h2>
+              </div>
             </div>
             <div class="col-lg-6 col-md-12 banner-image">
               <img
                 src="images/faq.png"
                 alt="faq-img"
                 class="img-fluid"
-                width="250px"
+                height="1em"
               />
             </div>
           </div>
         </div>
       </section>
+
       <!-- section2 -->
-      <section class="second accordion" id="questions">
-        <main class="container">
+      <section class="second accordion container" id="questions">
+        <div class="container" style="justify-content: center">
           <h5
             data-bs-toggle="collapse"
             data-bs-target="#multiCollapseExample1"
@@ -111,7 +126,7 @@
             aria-controls="multiCollapseExample1"
             style="cursor: pointer"
           >
-            <img src="images/add.jpg" alt="Add image" /> How can I downlod a
+            <img src="images/add.jpg" alt="Add image" /> How can I download a
             template of Terms and Condition?
           </h5>
           <div>
@@ -205,13 +220,41 @@
               molestiae sit at?
             </p>
           </div>
-        </main>
+        </div>
       </section>
       <!-- section3 -->
-      <section class="third" style="background-color: #111f4d; color: white">
-        <h5>Still have questions?</h5>
-        <p>Can't find answers to your questions? Please chat our team</p>
-        <button>Get in touch</button>
+      <section
+        class="third container"
+        style="
+          background-color: #111f4d;
+          color: white;
+          margin: 7em;
+          border-radius: 0.2em;
+        "
+      >
+        <div class="container px-4">
+          <div class="row gx-5">
+            <div class="col">
+              <div class="p-3 border; border:none">
+                <h5>Still have questions?</h5>
+
+                <p>
+                  Can't find answers to your questions? Please chat our team
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-3 border; border: none">
+                <button
+                  class="col align-self-end"
+                  style="border: none; background-color: white"
+                >
+                  <p style="margin: 1em; border: none">Get in touch</p>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- Footer -->
